--- a/CSE3010/.project
+++ b/CSE3010/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>lolo</name>
+	<name>CSE3010</name>
 	<comment></comment>
 	<projects>
 	</projects>
